--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       - .:/express
     depends_on:
       - db
+      - redis
     environment:
       - DATABASE_URL=postgres://postgres:password@db:5432/mydb
+      - REDIS_URL=redis://redis:6379/0
 
   db:
     image: postgres:13
@@ -25,6 +27,11 @@ services:
       - "5432:5432"
     volumes:
       - ./db:/docker-entrypoint-initdb.d
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
 
   pgadmin:
     image: dpage/pgadmin4
