--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,23 +8,31 @@ services:
       - .:/express
     depends_on:
       - db
+      - redis
     environment:
       - DATABASE_URL=postgres://postgres:password@db:5432/mydb
+      - REDIS_HOST=redis
 
   db:
     image: postgres:13
     restart: always
     environment:
-       POSTGRES_USER: postgres
-       POSTGRES_PASSWORD: password
-       POSTGRES_DB: mydb
-       POSTGRES_HOST: 127.0.0.1
-       POSTGRES_PORT: 5432
-       PGDATA: /var/lib/postgresql/data
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydb
+      POSTGRES_HOST: 127.0.0.1
+      POSTGRES_PORT: 5432
+      PGDATA: /var/lib/postgresql/data
     ports:
       - "5432:5432"
     volumes:
       - ./db:/docker-entrypoint-initdb.d
+
+  redis:
+    image: redis:6
+    restart: always
+    ports:
+      - "6379:6379"
 
   pgadmin:
     image: dpage/pgadmin4
