--- a/api/package.json
+++ b/api/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "pg": "^8.10.0",
     "redis": "^3.1.2"
+  },
+  "devDependencies": {
+    "@types/k6": "^0.43.3"
   }
 }
