--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.10.0"
+  },
+  "devDependencies": {
+    "@types/k6": "^0.43.3"
   }
 }
