--- a/api/nginx.conf
+++ b/api/nginx.conf
@@ -1,23 +1,35 @@
 worker_processes 4;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
-
+    # Keepalive and HTTP settings
+    keepalive_timeout 60s;
+    send_timeout 30s;
+    proxy_read_timeout 60s;
+    proxy_buffering off;
+    proxy_request_buffering off;
+    
     upstream express_servers {
         server express-1:3000;
         server express-2:3000;
         server express-3:3000;
         # Add more servers here if needed
+        keepalive 64;
     }
 
     server {
         listen 80;
 
         location / {
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_pass http://express_servers;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
     }
 }
+
